@@ -37,166 +37,166 @@ import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
 
 public class PacketEntityManager implements Listener, PacketPlayOutListener,
-        de.timesnake.basic.bukkit.util.world.entity.EntityManager {
+    de.timesnake.basic.bukkit.util.world.entity.EntityManager {
 
-    public static final String FAKE_PLAYER_TEAM_NAME = "fake_players";
+  public static final String FAKE_PLAYER_TEAM_NAME = "fake_players";
 
-    private final ConcurrentHashMap<Triple<World, Integer, Integer>, Collection<PacketEntity>> entitiesByChunk = new ConcurrentHashMap<>();
+  private final ConcurrentHashMap<Triple<World, Integer, Integer>, Collection<PacketEntity>> entitiesByChunk = new ConcurrentHashMap<>();
 
-    private final ConcurrentHashMap<UUID, Collection<Chunk>> preLoadedChunksByUuid = new ConcurrentHashMap<>();
+  private final ConcurrentHashMap<UUID, Collection<Chunk>> preLoadedChunksByUuid = new ConcurrentHashMap<>();
 
-    public PacketEntityManager() {
-        MapDisplayBuilder.ExMapFont.loadFonts();
-        Server.registerListener(this, BasicBukkit.getPlugin());
-        Server.getPacketManager().addListener(this);
+  public PacketEntityManager() {
+    MapDisplayBuilder.ExMapFont.loadFonts();
+    Server.registerListener(this, BasicBukkit.getPlugin());
+    Server.getPacketManager().addListener(this);
+  }
+
+  @PacketHandler(type = {ExPacket.Type.PLAY_OUT_LEVEL_CHUNK_WITH_LIGHT_PACKET,
+      ExPacket.Type.PLAY_OUT_CHUNK_UNLOAD})
+  public void onPacket(ExPacketPlayOut packet, Player receiver) {
+
+    boolean load;
+    Chunk chunk;
+
+    ExWorld world = Server.getWorld(receiver.getWorld());
+
+    Tuple<Integer, Integer> coords;
+
+    if (packet instanceof ExClientboundLevelChunkWithLightPacket p) {
+      load = true;
+      coords = p.getChunkCoordinates();
+    } else if (packet instanceof ExPacketPlayOutChunkUnload p) {
+      load = false;
+      coords = p.getChunkCoordinates();
+    } else {
+      return;
     }
 
-    @PacketHandler(type = {ExPacket.Type.PLAY_OUT_LEVEL_CHUNK_WITH_LIGHT_PACKET,
-            ExPacket.Type.PLAY_OUT_CHUNK_UNLOAD})
-    public void onPacket(ExPacketPlayOut packet, Player receiver) {
+    chunk = world.getChunkAt(coords.getA(), coords.getB());
 
-        boolean load;
-        Chunk chunk;
+    User user = Server.getUser(receiver);
 
-        ExWorld world = Server.getWorld(receiver.getWorld());
-
-        Tuple<Integer, Integer> coords;
-
-        if (packet instanceof ExClientboundLevelChunkWithLightPacket p) {
-            load = true;
-            coords = p.getChunkCoordinates();
-        } else if (packet instanceof ExPacketPlayOutChunkUnload p) {
-            load = false;
-            coords = p.getChunkCoordinates();
-        } else {
-            return;
-        }
-
-        chunk = world.getChunkAt(coords.getA(), coords.getB());
-
-        User user = Server.getUser(receiver);
-
-        if (user == null) {
-            this.preLoadedChunksByUuid.computeIfAbsent(receiver.getUniqueId(), p -> new HashSet<>())
-                    .add(chunk);
-            return;
-        }
-
-        if (load) {
-            this.loadEntitiesInChunk(user, chunk);
-        } else {
-            this.unloadEntitiesInChunk(user, chunk);
-        }
-
+    if (user == null) {
+      this.preLoadedChunksByUuid.computeIfAbsent(receiver.getUniqueId(), p -> new HashSet<>())
+          .add(chunk);
+      return;
     }
 
-    private void loadEntitiesInChunk(User user, Chunk chunk) {
-        for (PacketEntity entity : this.entitiesByChunk
-                .getOrDefault(new Triple<>(chunk.getWorld(), chunk.getX(), chunk.getZ()),
-                        ConcurrentHashMap.newKeySet(0))
-                .stream().filter(e -> e.isUserWatching(user)).toList()) {
-            entity.loadForUser(user);
-        }
+    if (load) {
+      this.loadEntitiesInChunk(user, chunk);
+    } else {
+      this.unloadEntitiesInChunk(user, chunk);
     }
 
-    private void unloadEntitiesInChunk(User user, Chunk chunk) {
-        for (PacketEntity entity : this.entitiesByChunk
-                .getOrDefault(new Triple<>(chunk.getWorld(), chunk.getX(), chunk.getZ()),
-                        ConcurrentHashMap.newKeySet(0)).stream()
-                .filter(e -> e.isUserWatching(user)).toList()) {
-            entity.unloadForUser(user);
-        }
+  }
+
+  private void loadEntitiesInChunk(User user, Chunk chunk) {
+    for (PacketEntity entity : this.entitiesByChunk
+        .getOrDefault(new Triple<>(chunk.getWorld(), chunk.getX(), chunk.getZ()),
+            ConcurrentHashMap.newKeySet(0))
+        .stream().filter(e -> e.isUserWatching(user)).toList()) {
+      entity.loadForUser(user);
     }
+  }
 
-    private Collection<PacketEntity> getAllEntities() {
-        return this.entitiesByChunk.values().stream().flatMap(Collection::stream)
-                .collect(Collectors.toList());
+  private void unloadEntitiesInChunk(User user, Chunk chunk) {
+    for (PacketEntity entity : this.entitiesByChunk
+        .getOrDefault(new Triple<>(chunk.getWorld(), chunk.getX(), chunk.getZ()),
+            ConcurrentHashMap.newKeySet(0)).stream()
+        .filter(e -> e.isUserWatching(user)).toList()) {
+      entity.unloadForUser(user);
     }
+  }
 
-    public void tryLoadEntityForUser(PacketEntity entity, User user) {
-        if (this.preLoadedChunksByUuid.containsKey(user.getUniqueId())) {
-            Chunk chunk = entity.getLocation().getChunk();
-            if (this.preLoadedChunksByUuid.get(user.getUniqueId()).contains(chunk)) {
-                entity.loadForUser(user);
-            }
-        }
+  private Collection<PacketEntity> getAllEntities() {
+    return this.entitiesByChunk.values().stream().flatMap(Collection::stream)
+        .collect(Collectors.toList());
+  }
+
+  public void tryLoadEntityForUser(PacketEntity entity, User user) {
+    if (this.preLoadedChunksByUuid.containsKey(user.getUniqueId())) {
+      Chunk chunk = entity.getLocation().getChunk();
+      if (this.preLoadedChunksByUuid.get(user.getUniqueId()).contains(chunk)) {
+        entity.loadForUser(user);
+      }
     }
+  }
 
-    private void addEntity(PacketEntity entity) {
-        Chunk chunk = entity.getLocation().getChunk();
-        this.entitiesByChunk.computeIfAbsent(new Triple<>(entity.getLocation().getWorld(),
-                chunk.getX(), chunk.getZ()), u -> ConcurrentHashMap.newKeySet()).add(entity);
+  private void addEntity(PacketEntity entity) {
+    Chunk chunk = entity.getLocation().getChunk();
+    this.entitiesByChunk.computeIfAbsent(new Triple<>(entity.getLocation().getWorld(),
+        chunk.getX(), chunk.getZ()), u -> ConcurrentHashMap.newKeySet()).add(entity);
+  }
+
+  private void removeEntity(PacketEntity entity) {
+    this.entitiesByChunk.forEach((chunk, entities) -> entities.remove(entity));
+  }
+
+  @Override
+  public void registerEntity(PacketEntity entity) {
+    this.addEntity(entity);
+    entity.setPublic(true);
+  }
+
+  @Override
+  public void registerEntity(PacketEntity entity, Collection<? extends User> users) {
+    this.addEntity(entity);
+    users.forEach(entity::addWatcher);
+  }
+
+  @Override
+  public void registerEntity(PacketEntity entity, User... users) {
+    this.registerEntity(entity, Arrays.asList(users));
+  }
+
+  @Override
+  public void unregisterEntity(PacketEntity entity) {
+    this.removeEntity(entity);
+    entity.despawnForUser();
+  }
+
+  @Override
+  public Set<PacketEntity> getEntitiesByWorld(ExWorld world) {
+    return new HashSet<>(this.entitiesByChunk.entrySet().stream()
+        .filter(entry -> entry.getKey().getA().equals(world.getBukkitWorld()))
+        .map(Map.Entry::getValue).flatMap(Collection::stream)
+        .toList());
+  }
+
+  @Override
+  public <EntityType extends PacketEntity> Set<EntityType> getEntitiesByWorld(ExWorld world,
+      Class<EntityType> entityClass) {
+    return ((Set<EntityType>) this.entitiesByChunk.entrySet().stream()
+        .filter(entry -> entry.getKey().getA().equals(world.getBukkitWorld()))
+        .map(Map.Entry::getValue).flatMap(Collection::stream)
+        .filter(entity -> entityClass.isAssignableFrom(entity.getClass()))
+        .collect(Collectors.toSet()));
+  }
+
+  @EventHandler
+  public void onUserJoin(AsyncUserJoinEvent e) {
+    Server.getScoreboardManager().getPacketManager().sendPacket(e.getUser(),
+        ExPacketPlayOutTablistTeamCreation.wrap(FAKE_PLAYER_TEAM_NAME, "", ChatColor.WHITE,
+            ExPacketPlayOutTablistTeamCreation.NameTagVisibility.NEVER));
+
+    Collection<Chunk> preLoadedChunks = this.preLoadedChunksByUuid.remove(
+        e.getUser().getUniqueId());
+
+    if (preLoadedChunks != null) {
+      for (Chunk chunk : preLoadedChunks) {
+        Server.runTaskLaterAsynchrony(
+            () -> this.loadEntitiesInChunk(e.getUser(), chunk),
+            20 * 3, BasicBukkit.getPlugin());
+
+      }
     }
+  }
 
-    private void removeEntity(PacketEntity entity) {
-        this.entitiesByChunk.forEach((chunk, entities) -> entities.remove(entity));
-    }
+  @EventHandler
+  public void onUserQuit(AsyncUserQuitEvent e) {
+    User user = e.getUser();
+    this.getAllEntities().forEach(entity -> entity.onUserQuit(user));
 
-    @Override
-    public void registerEntity(PacketEntity entity) {
-        this.addEntity(entity);
-        entity.setPublic(true);
-    }
-
-    @Override
-    public void registerEntity(PacketEntity entity, Collection<? extends User> users) {
-        this.addEntity(entity);
-        users.forEach(entity::addWatcher);
-    }
-
-    @Override
-    public void registerEntity(PacketEntity entity, User... users) {
-        this.registerEntity(entity, Arrays.asList(users));
-    }
-
-    @Override
-    public void unregisterEntity(PacketEntity entity) {
-        this.removeEntity(entity);
-        entity.despawnForUser();
-    }
-
-    @Override
-    public Set<PacketEntity> getEntitiesByWorld(ExWorld world) {
-        return new HashSet<>(this.entitiesByChunk.entrySet().stream()
-                .filter(entry -> entry.getKey().getA().equals(world.getBukkitWorld()))
-                .map(Map.Entry::getValue).flatMap(Collection::stream)
-                .toList());
-    }
-
-    @Override
-    public <EntityType extends PacketEntity> Set<EntityType> getEntitiesByWorld(ExWorld world,
-            Class<EntityType> entityClass) {
-        return ((Set<EntityType>) this.entitiesByChunk.entrySet().stream()
-                .filter(entry -> entry.getKey().getA().equals(world.getBukkitWorld()))
-                .map(Map.Entry::getValue).flatMap(Collection::stream)
-                .filter(entity -> entityClass.isAssignableFrom(entity.getClass()))
-                .collect(Collectors.toSet()));
-    }
-
-    @EventHandler
-    public void onUserJoin(AsyncUserJoinEvent e) {
-        Server.getScoreboardManager().getPacketManager().sendPacket(e.getUser(),
-                ExPacketPlayOutTablistTeamCreation.wrap(FAKE_PLAYER_TEAM_NAME, "", ChatColor.WHITE,
-                        ExPacketPlayOutTablistTeamCreation.NameTagVisibility.NEVER));
-
-        Collection<Chunk> preLoadedChunks = this.preLoadedChunksByUuid.remove(
-                e.getUser().getUniqueId());
-
-        if (preLoadedChunks != null) {
-            for (Chunk chunk : preLoadedChunks) {
-                Server.runTaskLaterAsynchrony(
-                        () -> this.loadEntitiesInChunk(e.getUser(), chunk),
-                        20 * 3, BasicBukkit.getPlugin());
-
-            }
-        }
-    }
-
-    @EventHandler
-    public void onUserQuit(AsyncUserQuitEvent e) {
-        User user = e.getUser();
-        this.getAllEntities().forEach(entity -> entity.onUserQuit(user));
-
-        this.preLoadedChunksByUuid.remove(user.getUniqueId());
-    }
+    this.preLoadedChunksByUuid.remove(user.getUniqueId());
+  }
 }
